something edit in this penguine porjects

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="grid lg:grid-cols-3">
           <!-- Card-1 -->
-          <div class="p-5 border-4 rounded-3xl space-y-4 drop-shadow-lg">
+          <div class="p-5 rounded-3xl space-y-4 drop-shadow-lg">
             <img
               class="p-5 rounded-3xl bg-[#F1F1F1]"
               src="images/jacket-1.png"
@@ -111,7 +111,7 @@
             </div>
           </div>
           <!-- Card-2 -->
-          <div class="p-5 border-4 rounded-3xl space-y-4 drop-shadow-lg">
+          <div class="p-5  rounded-3xl space-y-4 drop-shadow-lg">
             <img
               class="p-5 rounded-3xl bg-[#F1F1F1]"
               src="images/jacket-2.png"
@@ -150,7 +150,7 @@
             </div>
           </div>
           <!-- Card-3-->
-          <div class="p-5 border-4 rounded-3xl space-y-4 drop-shadow-lg">
+          <div class="p-5 rounded-3xl space-y-4 drop-shadow-lg">
             <img
               class="p-5 rounded-3xl bg-[#F1F1F1]"
               src="images/jacket-3.png"
